--- a/app/src/styles/_mixins.scss
+++ b/app/src/styles/_mixins.scss
@@ -1,10 +1,45 @@
 // Mixins
-@mixin flex-center {
+@mixin flex-center-col {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 @mixin box-shadow($shadow) {
     box-shadow: $shadow;
+}
+
+@mixin warning-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: bold;
+
+    h1 {
+        padding: 5px 10px;
+        border-radius: 3px;
+        font-size: 48px;
+    }
+}
+
+@mixin warning-links {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+
+    a {
+        text-decoration: none;
+        color: $primary-color;
+        font-size: 24px;
+        padding: 3px 5px;
+        border-radius: 5px;
+        border: 2px solid $primary-color;
+
+        &:hover {
+            background-color: $light-grey;
+        }
+    }
 }
