feat: add deck, sets, questions for flashcards and connect api to ui

--- a/app/src/components/Common/common.scss
+++ b/app/src/components/Common/common.scss
@@ -6,4 +6,11 @@
     background-color: $light-grey;
     height: 100%;
     width: 200px;
+
+    nav {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 5px;
+    }
 }
